Add makefile to run the simulation and create the correct directories

--- a/leader_election_simulation/Makefile
+++ b/leader_election_simulation/Makefile
@@ -1,5 +1,21 @@
+define create_data_dir
+	if [ -d "./data" ]; then \
+        rm -r data; \
+		mkdir data; \
+		mkdir data/stake; \
+		mkdir data/balance; \
+		mkdir data/proposals; \
+	else \
+		mkdir data; \
+		mkdir data/stake; \
+		mkdir data/balance; \
+		mkdir data/proposals; \
+    fi
+endef
+
 install:
 	julia package_manager.jl
 
 run:
-	julia leader_election_simulation.jl
+	$(call create_data_dir)
+	julia voting_simulation.jl
